--- a/About-Me/style.css
+++ b/About-Me/style.css
@@ -1,6 +1,7 @@
 div {
-  postion: absolute;
-  z-index: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 0px;
   width: 1920px;
   background-color: black;
