--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
   }
 
 div {
-  postion: absolute;
-  z-index: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 0px;
-  width: 1920px;
+  width: 100%;
   background-color: black;
 }
 
